# telaflow-app

./: .dockerignore  .gitignore  CHECK_GITHUB_SECRETS.md  DEPLOY_TROUBLESHOOT.sh  FIX_SSH_DEPLOY.sh  PHASE_1_SUMMARY.md  PHASE_2_WEEK2_SUMMARY.md  README.md  RE_RUN_WORKFLOWS.md  SSH_DIAGNOSTIC.sh  UX_REFINAMENTO_SUMMARY.md  package-lock.json  package.json
apps/cloud-api/: .env.example  Dockerfile  MIGRATIONS.md  README.md  alembic.ini  pyproject.toml  telaflow_cloud_api.db
apps/cloud-api/alembic/: env.py
apps/cloud-api/alembic/versions/: 267afc26556b_add_oauth_and_rbac_support_for_phase_2.py  b247d7245896_add_postgresql_compatibility_and_.py  ba77ed883ca0_initial_baseline_create_all_tables_for_.py
apps/cloud-api/openapi/: openapi.json
apps/cloud-api/scripts/: export_openapi.py  migrate_to_postgresql.py
apps/cloud-api/src/telaflow_cloud_api/: __init__.py  access.py  export_readiness.py  main.py  memory.py  seed.py  tenancy.py
apps/cloud-api/src/telaflow_cloud_api/api/: __init__.py
apps/cloud-api/src/telaflow_cloud_api/application/: __init__.py
apps/cloud-api/src/telaflow_cloud_api/auth/: __init__.py  jwt_utils.py  oauth.py  passwords.py  rbac.py
apps/cloud-api/src/telaflow_cloud_api/domain/: __init__.py  draw_config.py  draw_public_copy.py  event.py  media_requirement.py  scene.py  scene_behavior.py
apps/cloud-api/src/telaflow_cloud_api/persistence/: __init__.py  database.py  ids.py  models.py  (+1 more)
apps/cloud-api/tests/: conftest.py  schema_helpers.py  test_auth.py  test_auth_rbac.py  test_pack_export_schema_compliance.py  test_showcase_event.py
(+158 files in other folders)
