[project]
name = "telaflow-cloud-api"
version = "0.1.0"
description = "TelaFlow Cloud API (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "alembic>=1.14.0",
  "authlib>=1.3.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
